# BullsAndCowsBot

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: app.py  config.py  requirements.txt
